# loadout-forge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
LoadoutForge.app.before_install.bak.1781267966746/Contents/: Info.plist
LoadoutForge.app.before_install.bak.1781267966746/Contents/Resources/resources/scripts/: mod_registry.py
LoadoutForge.app.before_install.bak/Contents/Resources/resources/scripts/: build_loadout.py  mod_registry.py
LoadoutForge.app/Contents/Resources/resources/scripts/: build_loadout.py  mod_registry.py
scripts/: install-app.mjs  sync-bundle-resources.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/scripts/: build_loadout.py  build_mod_maker.py  mod_registry.py  sync_owned_gear.py
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: LoadoutForge.tsx  ModCard.tsx  ModMaker.tsx  ModelLightbox.tsx  ModelViewer.tsx  SelectedLoadoutStrip.tsx
src/lib/: donors.ts  glb.ts  previewModel.ts  slots.ts  tauri.ts  types.ts
