[package]
name = "app"
version = "0.1.0"
description = "Build Cohen Concepts Crimson Desert mod loadouts for CDUMM"
authors = ["Mitchell Cohen <profmitchell@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/profmitchell/loadout-forge"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
